--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -10,4 +10,42 @@
         <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
     </style>
+
+    <style name="FullScreenTheme" parent="Theme.Material3.Light.NoActionBar">
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+        <item name="android:windowFullscreen">false</item>
+        <item name="android:windowTranslucentStatus">false</item>
+        <item name="android:statusBarColor">@color/app_primary_color</item>
+        <item name="android:windowLightStatusBar">true</item>
+    </style>
+
+    <!-- Text appearances -->
+    <style name="BannerTextViewStyle">
+        <item name="android:textColor">@color/black</item>
+        <item name="android:textSize">24sp</item>
+        <item name="fontFamily">@font/product_sans_bold</item>
+    </style>
+
+    <style name="TitleTextViewStyle">
+        <item name="android:textColor">@color/black</item>
+        <item name="android:textSize">20sp</item>
+        <item name="fontFamily">@font/product_sans_regular</item>
+    </style>
+
+    <style name="AppTextViewStyle" parent="Base.TextAppearance.AppCompat">
+        <item name="android:fontFamily">@font/product_sans_regular</item>
+        <item name="lineSpacing">2dp</item>
+        <item name="android:textColor">@color/black</item>
+    </style>
+
+    <!-- Button appearances -->
+    <style name="PrimaryColoredButton" parent="@style/Widget.MaterialComponents.Button">
+        <item name="android:textAllCaps">false</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textSize">@dimen/abc_text_size_subhead_material</item>
+        <item name="android:fontFamily">@font/product_sans_regular</item>
+        <item name="backgroundTint">@color/app_primary_color</item>
+        <item name="android:paddingVertical">12dp</item>
+    </style>
 </resources>
