--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
 
     <color name="normal">#39465B</color>
     <color name="light">#639DC8</color>
+    <color name="com.chattylabs.component.color.green">#4caf50</color>
 </resources>
