--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -36,6 +36,7 @@
     <style name="AppTextViewStyle" parent="Base.TextAppearance.AppCompat">
         <item name="android:fontFamily">@font/product_sans_regular</item>
         <item name="lineSpacing">2dp</item>
+        <item name="android:textSize">16sp</item>
         <item name="android:textColor">@color/black</item>
     </style>
 
