--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,8 +6,8 @@
     <color name="black_overlay">#66000000</color>
 
     <color name="primary_color_variant">#FEFBE9</color>
-
+    <color name="colorLightGray">#D8D8D8</color>
     <color name="normal">#39465B</color>
     <color name="light">#639DC8</color>
-    <color name="com.chattylabs.component.color.green">#4caf50</color>
+    <color name="green">#4caf50</color>
 </resources>
