--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,5 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <dimen name="com.chattylabs.component.dimen.stroke">1dp</dimen>
-    <dimen name="com.chattylabs.component.dimen.zero">0dp</dimen>
+    <dimen name="ripple_stroke">1dp</dimen>
 </resources>
