--- a/app/src/main/res/drawable/border_gray.xml
+++ b/app/src/main/res/drawable/border_gray.xml
@@ -1,17 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layer-list xmlns:android="http://schemas.android.com/apk/res/android" >
-    <item>
-        <shape
-            android:shape="rectangle">
-            <solid android:color="@android:color/white" />
-        </shape>
-    </item>
-    <item android:bottom="0.5dp">
-        <shape
-            android:shape="rectangle">
-            <stroke android:width="1dp" android:color="@color/colorLightGray" />
-            <solid android:color="@android:color/white" />
-        </shape>
-    </item>
-</layer-list>
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
+    android:shape="rectangle">
+
+    <solid android:color="@color/primary_color_variant" />
+    <stroke
+        android:width="1dp"
+        android:color="@color/colorLightGray" />
+    <corners android:radius="4dp" />
+</shape>
+   
 
