--- a/app/src/main/res/layout/fragment_ranges.xml
+++ b/app/src/main/res/layout/fragment_ranges.xml
@@ -4,7 +4,64 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
+        <com.sasy.nontag.utils.IncreaseDecreaseButton
+            android:id="@+id/buttonIncrementDecrement"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:activeIconColor="@color/black"
+            app:initNumber="0"
+            app:layout_constraintEnd_toStartOf="@id/textView_get_range"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:maxNumber="99999"
+            app:minNumber="0" />
 
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/button_set_range"
+            style="@style/PrimaryColoredButton"
+            android:layout_width="wrap_content"
+            android:layout_height="0dp"
+            android:layout_marginVertical="8dp"
+            android:text="@string/set_range"
+            android:textSize="16sp"
+            app:layout_constraintEnd_toEndOf="@id/buttonIncrementDecrement"
+            app:layout_constraintStart_toStartOf="@id/buttonIncrementDecrement"
+            app:layout_constraintTop_toBottomOf="@id/buttonIncrementDecrement" />
 
+        <TextView
+            android:id="@+id/textView_get_range"
+            style="@style/AppTextViewStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="8dp"
+            android:background="@drawable/border_gray"
+            android:paddingHorizontal="56dp"
+            android:paddingVertical="13dp"
+            android:text="-"
+            android:textSize="18sp"
+            android:textStyle="bold"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@id/buttonIncrementDecrement"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/button_get_range"
+            style="@style/PrimaryColoredButton"
+            android:layout_width="wrap_content"
+            android:layout_height="0dp"
+            android:layout_marginVertical="16dp"
+            android:text="@string/get_range"
+            android:textSize="16sp"
+            app:layout_constraintEnd_toEndOf="@id/textView_get_range"
+            app:layout_constraintStart_toStartOf="@id/textView_get_range"
+            app:layout_constraintTop_toBottomOf="@id/textView_get_range" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
