--- a/app/src/main/res/layout/menu_layout_item.xml
+++ b/app/src/main/res/layout/menu_layout_item.xml
@@ -12,6 +12,7 @@
         android:drawableEnd="@drawable/ic_baseline_chevron_right_24"
         android:drawableTint="@color/white"
         android:gravity="start"
+        android:textSize="16sp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
