--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -21,7 +21,6 @@
             android:gravity="start"
             android:paddingTop="16dp"
             android:paddingBottom="4dp"
-            android:text="@string/searching_devices"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -35,25 +34,35 @@
             android:layout_marginStart="16dp"
             android:layout_marginEnd="16dp"
             android:gravity="start"
-            android:text="@string/searching_devices_description"
             android:textColor="@color/black_overlay"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/connecting_status_label" />
 
+
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/pulseLayoutCover"
             android:layout_width="match_parent"
             android:layout_height="0dp"
+
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/connecting_status_description">
+
+
+            <include
+                android:id="@+id/layoutNoBluetooth"
+                layout="@layout/layout_not_bluetooth"
+                android:layout_width="match_parent"
+                android:layout_height="0dp" />
+
 
             <com.sasy.nontag.utils.RipplePulseRelativeLayout
                 android:id="@+id/pulseLayout"
                 android:layout_width="wrap_content"
                 android:layout_height="0dp"
                 android:paddingVertical="100dp"
+                android:visibility="gone"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
@@ -69,63 +78,79 @@
                     android:layout_width="58dp"
                     android:layout_height="58dp"
                     android:background="@drawable/ic_circle_shape_filled"
+                    android:clickable="true"
                     android:tint="@color/app_primary_color"
+                    app:contentPadding="12dp"
                     app:srcCompat="@drawable/ic_baseline_bluetooth_searching_24" />
             </com.sasy.nontag.utils.RipplePulseRelativeLayout>
         </androidx.constraintlayout.widget.ConstraintLayout>
 
 
-        <androidx.appcompat.widget.AppCompatTextView
-            android:id="@+id/paired_with_label"
-            style="@style/AppTextViewStyle"
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/dataFoundLayout"
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_marginStart="16dp"
-            android:gravity="center_horizontal"
-            android:text="Paired With Laptop"
-            android:textColor="@color/black"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/pulseLayoutCover" />
-
-        <com.google.android.material.button.MaterialButton
-            android:id="@+id/button_view_details"
-            style="@style/PrimaryColoredButton"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_marginHorizontal="72dp"
-            android:layout_marginVertical="8dp"
-            android:text="@string/view_details"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/paired_with_label" />
-
-        <androidx.appcompat.widget.AppCompatTextView
-            android:id="@+id/recyclerview_label"
-            style="@style/TitleTextViewStyle"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_gravity="center"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="8dp"
-            android:gravity="start"
-            android:text="@string/history"
-            android:textStyle="bold"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/button_view_details" />
-
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/recyclerview_history"
-            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginHorizontal="16dp"
-            android:layout_marginTop="5dp"
-            android:layout_marginBottom="16dp"
-            app:layout_behavior="@string/appbar_scrolling_view_behavior"
-            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginTop="8dp"
+            android:visibility="gone"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/recyclerview_label" />
+            app:layout_constraintTop_toBottomOf="@id/pulseLayoutCover">
+
+            <androidx.appcompat.widget.AppCompatTextView
+                android:id="@+id/paired_with_label"
+                style="@style/AppTextViewStyle"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_marginStart="16dp"
+                android:gravity="center_horizontal"
+                android:text="Paired With Laptop"
+                android:textColor="@color/black"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/button_view_details"
+                style="@style/PrimaryColoredButton"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_marginHorizontal="72dp"
+                android:layout_marginVertical="8dp"
+                android:text="@string/view_details"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/paired_with_label" />
+
+            <androidx.appcompat.widget.AppCompatTextView
+                android:id="@+id/recyclerview_label"
+                style="@style/TitleTextViewStyle"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_gravity="center"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="8dp"
+                android:gravity="start"
+                android:text="@string/history"
+                android:textStyle="bold"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/button_view_details" />
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/recyclerview_history"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="16dp"
+                android:layout_marginTop="5dp"
+                android:layout_marginBottom="16dp"
+                app:layout_behavior="@string/appbar_scrolling_view_behavior"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/recyclerview_label" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.core.widget.NestedScrollView>
