--- a/app/src/main/res/layout/connected_history_layout_item.xml
+++ b/app/src/main/res/layout/connected_history_layout_item.xml
@@ -1,39 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="1dp"
+    android:background="?android:attr/selectableItemBackground"
     android:clickable="true"
     android:focusable="true"
-    app:cardBackgroundColor="@color/white"
-    app:cardCornerRadius="0dp"
-    app:cardElevation="1dp"
-    app:rippleColor="#80cfd8dc">
+    android:paddingVertical="10dp">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingVertical="14dp">
+    <androidx.appcompat.widget.AppCompatImageView
+        android:id="@+id/imageView_device_type"
+        android:layout_width="32dp"
+        android:layout_height="32dp"
+        android:layout_marginStart="8dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/ic_baseline_bluetooth_24" />
 
-        <androidx.appcompat.widget.AppCompatImageView
-            android:id="@+id/imageView_device_type"
-            android:layout_width="32dp"
-            android:layout_height="32dp"
-            android:layout_marginStart="8dp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/ic_baseline_bluetooth_24" />
+    <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/textView_device_name"
+        style="@style/AppTextViewStyle"
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:layout_marginStart="5dp"
+        android:textSize="14sp"
+        app:layout_constraintStart_toEndOf="@id/imageView_device_type"
+        app:layout_constraintTop_toTopOf="parent" />
 
-        <androidx.appcompat.widget.AppCompatTextView
-            android:id="@+id/textView_device_name"
-            style="@style/AppTextViewStyle"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_marginStart="5dp"
-            android:textSize="14sp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toEndOf="@id/imageView_device_type"
-            app:layout_constraintTop_toTopOf="parent" />
-    </androidx.constraintlayout.widget.ConstraintLayout>
-</com.google.android.material.card.MaterialCardView>
+    <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/textView_device_address"
+        style="@style/AppTextViewStyle"
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:layout_marginStart="5dp"
+        android:textColor="@color/colorLightGray"
+        android:textSize="12sp"
+        app:layout_constraintStart_toEndOf="@id/imageView_device_type"
+        app:layout_constraintTop_toBottomOf="@id/textView_device_name" />
+</androidx.constraintlayout.widget.ConstraintLayout>
