--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -75,8 +75,8 @@
 
                 <com.google.android.material.imageview.ShapeableImageView
                     android:id="@+id/imageView"
-                    android:layout_width="58dp"
-                    android:layout_height="58dp"
+                    android:layout_width="92dp"
+                    android:layout_height="92dp"
                     android:background="@drawable/ic_circle_shape_filled"
                     android:clickable="true"
                     android:tint="@color/app_primary_color"
@@ -113,7 +113,7 @@
             app:layout_constraintTop_toBottomOf="@id/paired_with_label" />
 
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/recyclerview_all_devices"
+            android:id="@+id/recyclerviewAlreadyPaired"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="16dp"
@@ -121,9 +121,21 @@
             android:layout_marginBottom="16dp"
             android:visibility="gone"
             app:layout_behavior="@string/appbar_scrolling_view_behavior"
-            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/button_view_details" />
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recyclerviewScannedDevices"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="16dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="16dp"
+            android:visibility="gone"
+            app:layout_behavior="@string/appbar_scrolling_view_behavior"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/recyclerviewAlreadyPaired" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.core.widget.NestedScrollView>
