--- a/app/src/main/res/layout/fragment_ranges.xml
+++ b/app/src/main/res/layout/fragment_ranges.xml
@@ -50,18 +50,17 @@
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@id/buttonIncrementDecrement"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="@+id/buttonIncrementDecrement" />
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/button_get_range"
             style="@style/PrimaryColoredButton"
             android:layout_width="wrap_content"
             android:layout_height="0dp"
-            android:layout_marginVertical="16dp"
             android:text="@string/get_range"
             android:textSize="16sp"
             app:layout_constraintEnd_toEndOf="@id/textView_get_range"
             app:layout_constraintStart_toStartOf="@id/textView_get_range"
-            app:layout_constraintTop_toBottomOf="@id/textView_get_range" />
+            app:layout_constraintTop_toTopOf="@+id/button_set_range" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
