--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,4 +12,5 @@
     <color name="green">#4caf50</color>
     <color name="increase_decrease_lib_active">#FF7E2E</color>
     <color name="increase_decrease_lib_inactive">#66000000</color>
+    <color name="error_color">#EC4134</color>
 </resources>
