--- a/app/src/main/res/layout/fragment_ranges.xml
+++ b/app/src/main/res/layout/fragment_ranges.xml
@@ -77,6 +77,7 @@
             android:id="@+id/checkboxCarriageReturn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            app:buttonTint="@color/app_primary_color"
             android:text="@string/r_cr_carriage_return"
             app:layout_constraintStart_toStartOf="@id/buttonIncrementDecrement"
             app:layout_constraintTop_toBottomOf="@id/dashedLine" />
