--- a/app/src/main/res/layout/fragment_ranges.xml
+++ b/app/src/main/res/layout/fragment_ranges.xml
@@ -12,6 +12,19 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/textViewToolTip"
+            style="@style/AppTextViewStyle"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:gravity="center_horizontal"
+            android:text="@string/distance_value_in_meter"
+            android:textColor="@color/black_overlay"
+            android:textSize="11sp"
+            app:layout_constraintEnd_toEndOf="@id/buttonIncrementDecrement"
+            app:layout_constraintStart_toStartOf="@id/buttonIncrementDecrement"
+            app:layout_constraintTop_toTopOf="parent" />
+
         <com.sasy.nontag.utils.IncreaseDecreaseButton
             android:id="@+id/buttonIncrementDecrement"
             android:layout_width="wrap_content"
@@ -20,7 +33,7 @@
             app:initNumber="0"
             app:layout_constraintEnd_toStartOf="@id/textView_get_range"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/textViewToolTip"
             app:maxNumber="99999"
             app:minNumber="0" />
 
