Added Blesig functionality

--- a/app/src/main/res/layout/fragment_ranges.xml
+++ b/app/src/main/res/layout/fragment_ranges.xml
@@ -43,7 +43,7 @@
             android:layout_width="wrap_content"
             android:layout_height="0dp"
             android:layout_marginVertical="8dp"
-            android:text="@string/set_range"
+            android:text="@string/set"
             android:textSize="16sp"
             app:layout_constraintEnd_toEndOf="@id/buttonIncrementDecrement"
             app:layout_constraintStart_toStartOf="@id/buttonIncrementDecrement"
@@ -70,7 +70,7 @@
             style="@style/PrimaryColoredButton"
             android:layout_width="wrap_content"
             android:layout_height="0dp"
-            android:text="@string/get_range"
+            android:text="@string/get"
             android:textSize="16sp"
             app:layout_constraintEnd_toEndOf="@id/textView_get_range"
             app:layout_constraintStart_toStartOf="@id/textView_get_range"
