--- a/app/src/main/res/layout/fragment_blesig.xml
+++ b/app/src/main/res/layout/fragment_blesig.xml
@@ -20,8 +20,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/short_text"
-            android:textSize="14sp"
-            android:textStyle="bold"
+            android:textColor="@color/black_overlay"
+            android:textSize="11sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -31,8 +31,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/long_text"
-            android:textSize="14sp"
-            android:textStyle="bold"
+            android:textColor="@color/black_overlay"
+            android:textSize="11sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -41,12 +41,14 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="6dp"
+            app:bsb_always_show_bubble="false"
             app:bsb_bubble_color="@color/app_primary_color"
-            app:bsb_bubble_text_color="@color/app_primary_color"
+            app:bsb_bubble_text_color="@color/black"
             app:bsb_bubble_text_size="16sp"
-            app:bsb_max="10"
+            app:bsb_max="9"
             app:bsb_min="1"
-            app:bsb_second_track_color="@color/black"
+            app:bsb_second_track_color="@color/black_overlay"
+            app:bsb_section_count="8"
             app:bsb_section_text_position="below_section_mark"
             app:bsb_seek_by_section="true"
             app:bsb_show_section_mark="true"
@@ -58,16 +60,44 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/shortTextView" />
 
+        <TextView
+            android:id="@+id/textViewGetBlesig"
+            style="@style/AppTextViewStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="0dp"
+            android:layout_marginTop="5dp"
+            android:background="@drawable/border_gray"
+            android:paddingHorizontal="56dp"
+            android:paddingVertical="13dp"
+            android:text="-"
+            android:textSize="16sp"
+            android:textStyle="bold"
+            app:layout_constraintEnd_toStartOf="@id/buttonGetBlesig"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@id/buttonGetBlesig" />
 
         <com.google.android.material.button.MaterialButton
-            android:id="@+id/button_view_details"
+            android:id="@+id/buttonGetBlesig"
             style="@style/PrimaryColoredButton"
             android:layout_width="wrap_content"
             android:layout_height="0dp"
             android:layout_marginVertical="16dp"
-            android:text="@string/set_blesig"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
+            android:text="@string/get"
+            android:textSize="16sp"
+            app:layout_constraintEnd_toStartOf="@id/buttonSetBlesig"
+            app:layout_constraintStart_toEndOf="@+id/textViewGetBlesig"
             app:layout_constraintTop_toBottomOf="@id/seekBar" />
+
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/buttonSetBlesig"
+            style="@style/PrimaryColoredButton"
+            android:layout_width="wrap_content"
+            android:layout_height="0dp"
+            android:layout_marginVertical="16dp"
+            android:text="@string/set"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@id/buttonGetBlesig"
+            app:layout_constraintTop_toBottomOf="@id/seekBar" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
