--- a/app/src/main/res/layout/menu_layout_item.xml
+++ b/app/src/main/res/layout/menu_layout_item.xml
@@ -4,11 +4,10 @@
     android:id="@+id/cardLayoutItem"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="2dp"
+    android:layout_margin="1dp"
     android:clickable="true"
     app:cardBackgroundColor="@color/app_primary_color"
-    app:cardCornerRadius="1dp"
-    app:cardElevation="2dp">
+    app:cardCornerRadius="6dp">
 
     <com.google.android.material.textview.MaterialTextView
         android:id="@+id/txtMenuName"
