--- a/app/src/main/res/layout/fragment_blesig.xml
+++ b/app/src/main/res/layout/fragment_blesig.xml
@@ -56,48 +56,94 @@
             app:bsb_thumb_color="@color/app_primary_color"
             app:bsb_thumb_text_size="16sp"
             app:bsb_track_size="3dp"
+            app:layout_constraintBottom_toTopOf="@id/textViewGetBlesig"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/shortTextView" />
 
-        <TextView
+        <!--        <TextView-->
+        <!--            android:id="@+id/textViewGetBlesig"-->
+        <!--            style="@style/AppTextViewStyle"-->
+        <!--            android:layout_width="wrap_content"-->
+        <!--            android:layout_height="0dp"-->
+        <!--            android:layout_marginTop="5dp"-->
+        <!--            android:background="@drawable/border_gray"-->
+        <!--            android:paddingHorizontal="56dp"-->
+        <!--            android:paddingVertical="13dp"-->
+        <!--            android:text="-"-->
+        <!--            android:textSize="16sp"-->
+        <!--            android:textStyle="bold"-->
+        <!--            app:layout_constraintEnd_toStartOf="@id/buttonGetBlesig"-->
+        <!--            app:layout_constraintStart_toStartOf="parent"-->
+        <!--            app:layout_constraintTop_toTopOf="@id/buttonGetBlesig" />-->
+
+        <!--        <com.google.android.material.button.MaterialButton-->
+        <!--            android:id="@+id/buttonGetBlesig"-->
+        <!--            style="@style/PrimaryColoredButton"-->
+        <!--            android:layout_width="wrap_content"-->
+        <!--            android:layout_height="0dp"-->
+        <!--            android:layout_marginVertical="16dp"-->
+        <!--            android:text="@string/get"-->
+        <!--            android:textSize="16sp"-->
+        <!--            app:layout_constraintEnd_toStartOf="@id/buttonSetBlesig"-->
+        <!--            app:layout_constraintStart_toEndOf="@+id/textViewGetBlesig"-->
+        <!--            app:layout_constraintTop_toBottomOf="@id/seekBar" />-->
+
+        <!--        <com.google.android.material.button.MaterialButton-->
+        <!--            android:id="@+id/buttonSetBlesig"-->
+        <!--            style="@style/PrimaryColoredButton"-->
+        <!--            android:layout_width="wrap_content"-->
+        <!--            android:layout_height="0dp"-->
+        <!--            android:layout_marginVertical="16dp"-->
+        <!--            android:text="@string/set"-->
+        <!--            app:layout_constraintEnd_toEndOf="parent"-->
+        <!--            app:layout_constraintStart_toEndOf="@id/buttonGetBlesig"-->
+        <!--            app:layout_constraintTop_toBottomOf="@id/seekBar" />-->
+
+
+        <com.google.android.material.textview.MaterialTextView
             android:id="@+id/textViewGetBlesig"
-            style="@style/AppTextViewStyle"
-            android:layout_width="wrap_content"
-            android:layout_height="0dp"
-            android:layout_marginTop="5dp"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="14dp"
+            android:layout_marginEnd="10dp"
             android:background="@drawable/border_gray"
-            android:paddingHorizontal="56dp"
-            android:paddingVertical="13dp"
+            android:gravity="center_horizontal"
+            android:paddingVertical="11dp"
             android:text="-"
-            android:textSize="16sp"
-            android:textStyle="bold"
-            app:layout_constraintEnd_toStartOf="@id/buttonGetBlesig"
+            android:textColor="@color/black"
+            android:textSize="14sp"
+            app:layout_constraintEnd_toStartOf="@+id/buttonGetBlesig"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintHorizontal_chainStyle="spread"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@id/buttonGetBlesig" />
+            app:layout_constraintTop_toBottomOf="@id/seekBar" />
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/buttonGetBlesig"
             style="@style/PrimaryColoredButton"
-            android:layout_width="wrap_content"
-            android:layout_height="0dp"
-            android:layout_marginVertical="16dp"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="10dp"
             android:text="@string/get"
-            android:textSize="16sp"
-            app:layout_constraintEnd_toStartOf="@id/buttonSetBlesig"
+            app:layout_constraintEnd_toStartOf="@+id/buttonSetBlesig"
+            app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toEndOf="@+id/textViewGetBlesig"
             app:layout_constraintTop_toBottomOf="@id/seekBar" />
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/buttonSetBlesig"
             style="@style/PrimaryColoredButton"
-            android:layout_width="wrap_content"
-            android:layout_height="0dp"
-            android:layout_marginVertical="16dp"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="10dp"
             android:text="@string/set"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@id/buttonGetBlesig"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toEndOf="@+id/buttonGetBlesig"
             app:layout_constraintTop_toBottomOf="@id/seekBar" />
-
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
