--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -24,6 +24,7 @@
         <attr name="inactiveIconColor" format="color" />
         <attr name="textSizeNumber" format="dimension" />
         <attr name="iconSize" format="dimension" />
+        <attr name="stepSize" format="integer" />
     </declare-styleable>
 
     <declare-styleable name="BubbleSeekBar">
