--- a/app/src/main/res/layout/fragment_deadband.xml
+++ b/app/src/main/res/layout/fragment_deadband.xml
@@ -18,7 +18,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:gravity="center_horizontal"
-            android:text="@string/distance_value_in_meter"
+            android:text="@string/distance_value_in_cms"
             android:textColor="@color/black_overlay"
             android:textSize="11sp"
             app:layout_constraintEnd_toEndOf="@id/buttonIncrementDecrement"
@@ -36,7 +36,8 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/textViewToolTip"
             app:maxNumber="99999"
-            app:minNumber="0" />
+            app:minNumber="0"
+            app:stepSize="10" />
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/buttonSetDb"
