--- a/app/src/main/res/layout/fragment_default_log.xml
+++ b/app/src/main/res/layout/fragment_default_log.xml
@@ -18,54 +18,24 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:gravity="center_horizontal"
-            android:text="@string/front_camera"
+            android:text="@string/default_log"
             android:textColor="@color/app_primary_color"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <androidx.appcompat.widget.AppCompatTextView
-            android:id="@+id/textViewRt"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginHorizontal="52dp"
-            android:fontFamily="@font/product_sans_regular"
-            android:gravity="center_horizontal"
-            android:paddingHorizontal="8dp"
-            android:text="@string/turn_on_off_camera"
-            android:textSize="14sp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/buttonSetDefaultLog"
+            style="@style/PrimaryColoredButton"
+            android:layout_width="wrap_content"
+            android:layout_height="0dp"
+            android:layout_marginVertical="8dp"
+            android:text="@string/set_default_log"
+            android:textSize="16sp"
+            app:layout_constraintEnd_toEndOf="@id/textViewToolTip"
+            app:layout_constraintStart_toStartOf="@id/textViewToolTip"
             app:layout_constraintTop_toBottomOf="@id/textViewToolTip" />
 
-        <com.google.android.material.button.MaterialButton
-            android:id="@+id/buttonTurnOn"
-            style="@style/PrimaryColoredButton"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginVertical="8dp"
-            android:layout_marginStart="52dp"
-            android:gravity="center_horizontal"
-            android:text="@string/enable"
-            android:textSize="16sp"
-            app:layout_constraintEnd_toStartOf="@+id/buttonTurnOff"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/textViewRt" />
-
-        <com.google.android.material.button.MaterialButton
-            android:id="@+id/buttonTurnOff"
-            style="@style/PrimaryColoredButton"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginVertical="8dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginEnd="52dp"
-            android:gravity="center_horizontal"
-            android:text="@string/disable"
-            android:textSize="16sp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/buttonTurnOn"
-            app:layout_constraintTop_toBottomOf="@id/textViewRt" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <com.google.android.material.textview.MaterialTextView
