--- a/app/src/main/res/layout/fragment_velocity.xml
+++ b/app/src/main/res/layout/fragment_velocity.xml
@@ -21,24 +21,24 @@
             android:text="@string/speed"
             android:textColor="@color/black_overlay"
             android:textSize="11sp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="@id/editTextVelocity"
+            app:layout_constraintStart_toStartOf="@id/editTextVelocity"
             app:layout_constraintTop_toTopOf="parent" />
 
         <androidx.appcompat.widget.AppCompatEditText
             android:id="@+id/editTextVelocity"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginHorizontal="52dp"
-            android:layout_marginTop="10dp"
+            android:layout_marginHorizontal="8dp"
             android:background="@drawable/border_gray"
             android:fontFamily="@font/product_sans_regular"
             android:hint="@string/enter_velocity"
             android:inputType="number"
             android:maxLength="10"
-            android:padding="12dp"
+            android:paddingHorizontal="8dp"
+            android:paddingVertical="16dp"
             android:textSize="14sp"
-            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintEnd_toStartOf="@id/textViewVelocity"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/textViewToolTip" />
 
@@ -54,6 +54,32 @@
             app:layout_constraintStart_toStartOf="@id/editTextVelocity"
             app:layout_constraintTop_toBottomOf="@id/editTextVelocity" />
 
+        <com.google.android.material.textview.MaterialTextView
+            android:id="@+id/textViewVelocity"
+            style="@style/AppTextViewStyle"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="10dp"
+            android:background="@drawable/border_gray"
+            android:gravity="center_horizontal"
+            android:paddingVertical="15dp"
+            android:text="-"
+            android:textColor="@color/black"
+            android:textSize="16sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@id/editTextVelocity"
+            app:layout_constraintTop_toTopOf="@+id/editTextVelocity" />
+
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/buttonGetVelocity"
+            style="@style/PrimaryColoredButton"
+            android:layout_width="wrap_content"
+            android:layout_height="0dp"
+            android:text="@string/get"
+            android:textSize="16sp"
+            app:layout_constraintEnd_toEndOf="@id/textViewVelocity"
+            app:layout_constraintStart_toStartOf="@id/textViewVelocity"
+            app:layout_constraintTop_toTopOf="@+id/buttonSetVelocity" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <com.google.android.material.textview.MaterialTextView
